# SimpleOverlayDll

./: .gitignore  CMakeLists.txt  README.md  build.bat  gen32.bat  gen64.bat
src/graphics_hook/: CMakeLists.txt
src/graphics_hook/private/windows/: d3d10-capture.cpp  d3d11-capture.cpp  d3d12-capture.cpp  d3d9_capture.cpp  d3d9_patches.hpp  directInput_capture.cpp  dll_win.cpp  dxgi-capture.cpp  dxgi-helpers.hpp  game_hook.cpp  game_hook.h  gl-capture.cpp  gl-decs.h  graphics_hook.cpp  graphics_hook.h  gui_shader.cpp  gui_shader.h  input_hook.cpp  input_hook.h  overlay_ui.cpp  windows_capture.cpp
src/graphics_hook/public/: directInput_capture.h  graphics_hook_common.h  overlay_ui.h  windows_capture.h
